--- a/savis4/src/app/features/two-means-ci/two-means-ci.component.html
+++ b/savis4/src/app/features/two-means-ci/two-means-ci.component.html
@@ -200,6 +200,14 @@
           <span summary="upperBound">{{upperBound }}</span>
         </div>
       </div>
+      
+      <!-- Export buttons -->
+      <div class="form-group mt-3">
+        <button class="btn" id="export-pdf-btn" (click)="exportAsPDF()" [disabled]="!isExportEnabled">{{ 'tmci_export_pdf' | translate }}</button>
+      </div>
+      <div class="form-group mt-3">
+        <button class="btn" id="export-docx-btn" (click)="exportAsDOCX()" [disabled]="!isExportEnabled">{{ 'tmci_export_docx' | translate }}</button>
+      </div>
     </div>
     <div class="rhs w-9/12">
       <canvas #chart5 style="height: 200;"></canvas>
