--- a/savis4/src/app/features/two-means-ci/two-means-ci.component.scss
+++ b/savis4/src/app/features/two-means-ci/two-means-ci.component.scss
@@ -179,11 +179,21 @@ input[type="checkbox"]{
 
 button, #uploadFile{
   background-color: var(--third-col);
-  color:white;
+  color: white;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
 
 button:hover, #uploadFile:hover{
   background-color: var(--fourth-col);
+}
+
+button:disabled, .btn:disabled {
+  background: var(--ninth-col) !important;
+  cursor: not-allowed !important;
 }
 
 .manual-link {
