--- a/savis4/src/app/components/footer/footer.component.html
+++ b/savis4/src/app/components/footer/footer.component.html
@@ -1,7 +1,3 @@
-<nav class="bg-navbar">
-    <div class="w-full flex flex-wrap items-center justify-center p-3 mt-8">
-      <ul>
-        <p class="text-gray-100 text-m">{{ 'nav_copyright' | translate }}</p>
-      </ul>
-    </div>
-  </nav>
+<footer class="app-footer" role="contentinfo">
+  <p>{{ 'nav_copyright' | translate }}</p>
+</footer>
