--- a/savis4/src/app/components/about/about.component.html
+++ b/savis4/src/app/components/about/about.component.html
@@ -105,12 +105,16 @@
             </div>
         </div>
     </div>
-    <hr class="mt-24">
-    <div class="mt-3 flex flex-col mx-auto w-full items-center justify-center">
-        <p class="mb-3" id="contactTitle">{{ 'contact' | translate }}</p>
-        <a class="text-black-500 underline hover:text-blue-700" href="https://www.csus.edu/faculty/d/rdiaz/"
-            target="_blank">Rafael E Diaz Escamilla</a>
+<hr class="mt-24">
+<div class="mt-3 flex flex-col mx-auto w-full items-center justify-center">
+  <p class="mb-3" id="contactTitle">{{ 'contact' | translate }}</p>
+  <div class="text-center">
+  <a class="text-black-500 underline hover:text-blue-700"
+     href="https://www.csus.edu/faculty/d/rdiaz/"
+     target="_blank">Rafael E Diaz Escamilla</a> | rdiaz@csus.edu | Office Location: Brighton Hall 127 | Office Phone: (916) 278-6588<br>California State University | Sacramento, 6000 J Street Sacramento California 95819-6051
     </div>
+</div>
+
 
 
 </body>
